# Analisis_Accidentes_Aereos_PowerBI

./: AnalisisAccidentesAereos_PowerBI.ipynb  README.md  accidentes_aereos.db  accidentes_aereos_limpio.csv  pyproject.toml
Archivos/: accidentes_aereos_limpio_250.csv
