[tool.poetry]
name = "analisis-accidentes-aereos-powerbi"
version = "0.1.0"
description = ""
authors = ["Hotcer <davisguarico27@gmail.com>"]
license = "'Apache'"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
google = "^3.0.0"
geopy = "^2.4.0"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
